# advent-of-code-2020

./: README.md
day01/: Cargo.toml  day01.rs  day01part1.rs
day02/: Cargo.toml  day02.rs
day03/: .gitignore  day03.d  makefile
day04/: CMakeLists.txt  day04.cpp
day05/: CMakeLists.txt  day05.f90  fpm.toml
day06/: day06.py  test_day06.py
day07/: day07.py
day08/: day08.fth
day09/: day09.ts  package.json  tsconfig.json
day10/: day10.cbl  makefile
day11/: day11.ts  package.json
day12/: day12.cbl  makefile
day13/: day13.fth
day14/: .gitignore  day14.hs  makefile
day15/: Cargo.toml  day15.rs
day16/: Cargo.toml  day16.rs
day17/: .gitignore  day17.hs  makefile
day18/: Cargo.toml  day18.rs
day19/: CMakeLists.txt  day19.cpp
day20/: day20.py
